--- a/OpenAL.NETCore/OpenAL.NETCore.csproj
+++ b/OpenAL.NETCore/OpenAL.NETCore.csproj
@@ -2,6 +2,18 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <Version>1.0.1</Version>
+    </PropertyGroup>
+    <PropertyGroup>
+        <PackageId>OpenAL.NETCore</PackageId>
+        <Authors>NathanielGlover</Authors>
+        <Description>
+            OpenAL.NETCore is an up-to-date set of cross-platform C# bindings for OpenAL 1.1 targeting .NET Core.
+        </Description>
+        <PackageTags>OpenAL;.NET</PackageTags>
+        <PackageLicenseUrl>https://github.com/NathanielGlover/OpenAL.NETCore/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageProjectUrl>https://github.com/NathanielGlover/OpenAL.NETCore</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/NathanielGlover/OpenAL.NETCore</RepositoryUrl>
     </PropertyGroup>
     <PropertyGroup Condition="'$(OS)' == 'Unix' And Exists ('/Library/Frameworks')">
         <DefineConstants>MACOS</DefineConstants>
